2012-07-10  Julien Bect  <julien.bect@supelec.fr>

	Fixed a warning generated by stk_compile_all under Octave.

	* misc/config/stk_compile_all.m: modified

2012-07-08  Julien Bect  <julien.bect@supelec.fr>

	Added tests and improved documentation.

	* sampling/stk_sampling_randunif.m: tests & doc
	* sampling/stk_sampling_randomlhs.m: idem
	* sampling/stk_sampling_regulargrid.m: idem
	* sampling/stk_sampling_maximinlhs.m: idem

	New function to test the LHS property.

	* misc/test/stk_is_lhs.m: new function

	Renamed stk_sampling_cartesiangrid to stk_sampling_regulargrid,
	and changed the meaning of the first argument for consistency with
	other stk_sampling_* functions.

	* sampling/stk_sampling_cartesiangrid.m: renamed and modified
	* examples/example01.m: modified accordingly
	* examples/example02.m: idem
	* examples/example04.m: idem
	* examples/example05.m: idem
	* examples/example06.m: idem
	* examples/example07.m: idem
	* examples/example08.m: idem
	* paramestim/stk_param_estim.m: idem
	* core/stk_predict.m: idem

2012-07-04  Julien Bect  <julien.bect@supelec.fr>

	Fixed a bug in stk_compile_all() under Octave, related to a
	strange behaviour of exist().

	* misc/config/stk_compile_all.m: bugfix.

	Improved doc and added tests in several functions. Also, fixed a
	minor bug in stk_model().

	* examples/example07.m: fixed comment
	* utils/stk_model.m: bugfix + doc + tests
	* paramestim/stk_remlqrg.m: doc + tests
	* paramestim/stk_param_estim.m: doc + tests

2012-06-30  Julien Bect  <julien.bect@supelec.fr>

	Fixed a bug in stk_runtests() under Octave. It is now possible to
	write "stk_runtests core" from the STK's root, for instance.

	* misc/test/stk_runtests.m: bugfix.

	Added a new function for approximate comparisons.

	* misc/test/stk_isequal_tolrel.m: new function.
	* core/stk_predict.m: modified test.

	Miscellaneous.

	* misc/error/stk_narginchk.m: fixed doc and comments.
	* core/stk_ortho_func.m: tests.
	* core/stk_make_matcov.m: idem.
