@@ -1,3 +1,10 @@
+2012-07-15  Julien Bect  <julien.bect@supelec.fr>
+
+	Replaced a call to isrow(), which didn't exist in some recent Matlab
+	versions (e.g., R2010b), by a direct call to size().
+
+	* misc/matlab/index.m: modified
+
 2012-07-10  Julien Bect  <julien.bect@supelec.fr>
 
 	Fixed a warning generated by stk_compile_all under Octave.
